--- a/index.html
+++ b/index.html
@@ -42,13 +42,34 @@
 
     <section class="hero" id="home">
       <main class="content">
-        <h1>Kopihitam, bikin kamu jadi <span>Hitam.</span></h1>
-        <p>Kopihitam pemersatu bangsa hitam.</p>
-        <a href="#" class="cta">Beli Sekarang</a>
+        <h1>A Cafe That <span>Accompany</span> ur days.</h1>
+        <p>Everything will be ok.</p>
+        <a href="#" class="cta">Join Now</a>
       </main>
     </section>
 
     <!-- Hero section end-->
+
+    <!-- About Section start -->
+
+    <section id="about" class="about">
+      <h2><span>Tentang</span> Kami</h2>
+
+       <div class="row">
+            <div class="about-image">
+                <img src="img/aboutbg.png" alt="Barista Janji Jiwa" />
+            </div>
+            <div class="about-text">
+                <!-- <p class="label">Tentang</p> -->
+                <h3>How's <span>Your</span> Day?</h3>
+                <p>Adopting a fresh-to-cup concept that serves a selection of Robloxian Local Coffee. Our trendy presentation and classic coffee-flavored products are our promise.</p>
+                <p>With over a decade of experience, How's your day has also managed to find a way to produce quality products at affordable prices. Our vision is to make How's Your Day Coffee a coffee shop brand that is in every corner of the city by bringing Indonesian coffee shop culture to the world.</p>
+            </div>
+        </div>
+    </section>
+
+
+<!-- About Section end -->
 
 
 
