--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
 
     <!-- Feather Icon -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -21,7 +25,9 @@
   <body>
     <!-- navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo"><img src="img/pesonaindo.png" alt=""></a>
+      <a href="#" class="navbar-logo"
+        ><img src="img/pesonaindo.png" alt=""
+      /></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
@@ -40,7 +46,10 @@
     <!-- Hero section start-->
     <section class="hero" id="home">
       <main class="content">
-        <h1>Arinda -<br> Tours<span> & </span>Travel</h1>
+        <h1>
+          Arinda -<br />
+          Tours<span> & </span>Travel
+        </h1>
         <p>Teman Piknik Asik</p>
         <a href="#contact" class="cta">Hubungi Sekarang</a>
       </main>
@@ -48,24 +57,85 @@
     <!-- Hero section end-->
 
     <!-- About Section start -->
-     <section id="about" class="about">
+    <section id="about" class="about">
       <h2>Tentang <span>Arinda</span></h2>
 
       <div class="row">
         <div class="about-img">
-          <img src="img/aboutarinda.jpg" alt="Tentang Kami" height="390">
+          <img src="img/aboutarinda.jpg" alt="About Arinda" height="390" />
         </div>
         <div class="content">
           <h3>Siapa sih <span>Arinda</span>?</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam dignissimos iusto impedit culpa quas, ullam dolorem quia vitae suscipit ipsam?</p>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime molestiae, possimus laudantium eligendi architecto sunt eveniet culpa consequuntur ea obcaecati nam perspiciatis. Nostrum iusto debitis laborum possimus eveniet optio, cumque commodi, maxime, saepe ipsum sapiente.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam
+            dignissimos iusto impedit culpa quas, ullam dolorem quia vitae
+            suscipit ipsam?
+          </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
+            molestiae, possimus laudantium eligendi architecto sunt eveniet
+            culpa consequuntur ea obcaecati nam perspiciatis. Nostrum iusto
+            debitis laborum possimus eveniet optio, cumque commodi, maxime,
+            saepe ipsum sapiente.
+          </p>
         </div>
       </div>
     </section>
     <!-- About Section end -->
 
-    <!-- Menu Section Start -->
-    <!-- Menu Section End -->
+    <!-- Contact Section Start -->
+    <section id="contact" class="contact">
+      <h2>Kontak <span>Arinda</span></h2>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing. <br />Lorem ipsum
+        dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Sint, ipsam.
+      </p>
+
+      <div class="row">
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-whatsapp"></i>
+          <h3>Whatsapp</h3>
+          <p>Hubungi kami melalui Whatsapp.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-google"></i>
+          <h3>Gmail</h3>
+          <p>Hubungi kami melalui Gmail.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-discord"></i>
+          <h3>Discord</h3>
+          <p>Hubungi kami melalui Discord.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-linkedin"></i>
+          <h3>LinkedIn</h3>
+          <p>Melihat karir kami melalui LinkedIn.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-youtube"></i>
+          <h3>Youtube</h3>
+          <p>Melihat konten kami melalui Youtube.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-instagram"></i>
+          <h3>Instagram</h3>
+          <p>Melihat konten kami melalui Instagram.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-facebook"></i>
+          <h3>Facebook</h3>
+          <p>Melihat konten kami melalui Facebook.</p>
+        </div>
+        <div class="contact-card">
+          <i id="contact" class="fa-brands fa-tiktok"></i>
+          <h3>Tiktok</h3>
+          <p>Melihat konten kami melalui Tiktok.</p>
+        </div>
+      </div>
+    </section>
+    <!-- Contact Section End -->
 
     <!-- Contact Section Start -->
     <!-- Contact Section End -->
@@ -78,7 +148,7 @@
       feather.replace();
     </script>
 
-    <!-- My Javaascript (Menu) -->
+    <!-- My Javaascript (HamburgerMenu) -->
     <script src="script.js"></script>
   </body>
 </html>
