--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Social Media</a>
         <a href="#location">Location</a>
       </div>
 
@@ -85,7 +85,7 @@
 
     <!-- Contact Section Start -->
     <section id="contact" class="contact">
-      <h2>Kontak <span>Arinda</span></h2>
+      <h2>Social <span>Arinda</span></h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing. <br />Lorem ipsum
         dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -137,8 +137,30 @@
     </section>
     <!-- Contact Section End -->
 
-    <!-- Contact Section Start -->
-    <!-- Contact Section End -->
+    <!-- Location Section Start -->
+    <section id="location" class="location">
+      <h2>Lokasi <span>Arinda</span></h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, cumque.
+      </p>
+      <div class="row">
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3998.6331339253347!2d112.77280007504741!3d-7.307738392700077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7faf78371efe7%3A0x7bd3695befdb3198!2sARINDA%20TOURS!5e1!3m2!1sid!2sid!4v1754388303670!5m2!1sid!2sid"
+            width="800"
+            height="500"
+            class="map"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          >
+          </iframe>
+        </div>
+        <a href="https://maps.app.goo.gl/mFkf25i97AmB4ThW6"><button class="btn">Menuju Lokasi</button></a>
+      </div>
+    </section>
+    <!-- Location Section End -->
 
     <!-- Footer Start -->
     <!-- Footer End -->
@@ -148,7 +170,7 @@
       feather.replace();
     </script>
 
-    <!-- My Javaascript (HamburgerMenu) -->
+    <!-- My Javaascript (HamburgerMenu  ) -->
     <script src="script.js"></script>
   </body>
 </html>
