--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           Tours<span> & </span>Travel
         </h1>
         <p>Teman Piknik Asik</p>
-        <a href="#contact" class="cta">Hubungi Sekarang</a>
+        <a href="#contact" class="cta">Selengkapnya</a>
       </main>
     </section>
     <!-- Hero section end-->
@@ -93,46 +93,62 @@
       </p>
 
       <div class="row">
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-whatsapp"></i>
-          <h3>Whatsapp</h3>
-          <p>Hubungi kami melalui Whatsapp.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-google"></i>
-          <h3>Gmail</h3>
-          <p>Hubungi kami melalui Gmail.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-discord"></i>
-          <h3>Discord</h3>
-          <p>Hubungi kami melalui Discord.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-linkedin"></i>
-          <h3>LinkedIn</h3>
-          <p>Melihat karir kami melalui LinkedIn.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-youtube"></i>
-          <h3>Youtube</h3>
-          <p>Melihat konten kami melalui Youtube.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-instagram"></i>
-          <h3>Instagram</h3>
-          <p>Melihat konten kami melalui Instagram.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-facebook"></i>
-          <h3>Facebook</h3>
-          <p>Melihat konten kami melalui Facebook.</p>
-        </div>
-        <div class="contact-card">
-          <i id="contact" class="fa-brands fa-tiktok"></i>
-          <h3>Tiktok</h3>
-          <p>Melihat konten kami melalui Tiktok.</p>
-        </div>
+        <a href="https://wa.me/6282231358118"
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-whatsapp"></i>
+            <h3>Whatsapp</h3>
+            <p>Hubungi kami melalui Whatsapp.</p>
+          </div></a
+        >
+        <a href=""
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-google"></i>
+            <h3>Gmail</h3>
+            <p>Hubungi kami melalui Gmail.</p>
+          </div></a
+        >
+        <a href="https://discord.gg/D5dCFK24"
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-discord"></i>
+            <h3>Discord</h3>
+            <p>Hubungi kami melalui Discord.</p>
+          </div></a
+        >
+        <a href=""
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-linkedin"></i>
+            <h3>LinkedIn</h3>
+            <p>Melihat karir kami melalui LinkedIn.</p>
+          </div></a
+        >
+        <a href="https://youtube.com/@arindatours9966?si=pVu4h-yL81ih6c13"
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-youtube"></i>
+            <h3>Youtube</h3>
+            <p>Melihat konten kami melalui Youtube.</p>
+          </div></a
+        >
+        <a href="https://www.instagram.com/arindatours?igsh=MXhrczBsc3dsOXhpag=="
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-instagram"></i>
+            <h3>Instagram</h3>
+            <p>Melihat konten kami melalui Instagram.</p>
+          </div></a
+        >
+        <a href="https://www.facebook.com/share/1B86h2bvKP/"
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-facebook"></i>
+            <h3>Facebook</h3>
+            <p>Melihat konten kami melalui Facebook.</p>
+          </div></a
+        >
+        <a href="https://www.tiktok.com/@temanpiknikasik?_t=ZS-8yccyY4rumf&_r=1"
+          ><div class="contact-card">
+            <i id="contact" class="fa-brands fa-tiktok"></i>
+            <h3>Tiktok</h3>
+            <p>Melihat konten-konten kami melalui Tiktok.</p>
+          </div></a
+        >
       </div>
     </section>
     <!-- Contact Section End -->
@@ -157,12 +173,41 @@
           >
           </iframe>
         </div>
-        <a href="https://maps.app.goo.gl/mFkf25i97AmB4ThW6"><button class="btn">Menuju Lokasi</button></a>
+        <a href="https://maps.app.goo.gl/mFkf25i97AmB4ThW6"
+          ><button class="btn">Menuju Lokasi</button></a
+        >
       </div>
     </section>
     <!-- Location Section End -->
 
     <!-- Footer Start -->
+       <footer class="footer">
+    <div class="footer-container">
+
+      <div class="footer-column">
+        <img src="img/LogoArinda.png" alt="Logo" class="logo" />
+        <p>Berjalan-jalan bersama Teman Piknik Asik.</p>
+        <a href="#https://www.instagram.com/arindatours?igsh=MXhrczBsc3dsOXhpag=="><i class="fab fa-instagram"></i></a>
+      </div>
+
+      <div class="footer-column">
+        <h3>Sections</h3>
+        <p><a href="#home">Home</a></p>
+        <p><a href="#about">About</a></p>
+        <p><a href="#contact">Social Media</a></p>
+      </div>
+
+      <div class="footer-column">
+        <h3>Address</h3>
+        <p>Jl. Medokan Semampir Aws III No.32</p>
+        <p>Kec. Sukolilo</p>
+        <p>Surabaya, Jawa Timur 60119</p>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      <p>Created by. <a href="https://github.com/AchmadRafif">Achmad<span>Rafif</span></a></p>
+    </div>
     <!-- Footer End -->
 
     <!-- Feather Icons -->
