Penyesuaian home section

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>Created by. <a href="https://github.com/AchmadRafif">Achmad<span>Rafif</span></a></p>
+      <p>Created by. <a href="https://github.com/AchmadRafif">AchmadRafif.</a></p>
     </div>
     <!-- Footer End -->
 
