--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- navbar start -->
     <nav class="navbar">
       <a href="#" class="navbar-logo"
-        ><img src="img/pesonaindo.png" alt=""
+        ><img src="img/LogoArinda2.png" alt=""
       /></a>
 
       <div class="navbar-nav">
