--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="footer-column">
         <img src="img/LogoArinda.png" alt="Logo" class="logo" />
         <p>Berjalan-jalan bersama Teman Piknik Asik.</p>
-        <a href="#https://www.instagram.com/arindatours?igsh=MXhrczBsc3dsOXhpag=="><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/arindatours?igsh=MXhrczBsc3dsOXhpag=="><i class="fab fa-instagram"></i></a>
       </div>
 
       <div class="footer-column">
